[package]
name = "slowdrive"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.35.0"
rand = "0.9.2"
rand_xorshift = "0.4.0"
bevy_rapier3d = {version = "0.32.0", features = ["simd-nightly", "debug-render-3d", ]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
