[package]
name = "slowdrive"
version = "0.1.0"
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]

[features]
dev = [
  "bevy/dynamic_linking",
  "bevy/dev"
]

[dependencies]
bevy = { version = "0.18", default-features = true, features = [
  "wayland",
  "free_camera"
]}
bevy-inspector-egui = "0.36"
leafwing-input-manager = "0.20"
# rand = "0.10"
# rand_xorshift = "0.5"

avian3d = "0.5"
# bevy_rapier3d = {version = "0.32.0", features = ["simd", "debug-render-3d", ]}
# webbrowser = {version = "1.1", features = ["hardened"]}
# winit = {version = "0.30", default-features = false}
# image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
# log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

# [build-dependencies]
# embed-resource = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true